The minimum change to make rusqlite support duckdb.
Currently we only support precompiled libraries:

ls /Users/fenjinwang/duckdb
libduckdb.dylib              libsqlite3_api_wrapper.dylib sqlite3.h

export DUCKDB_LIB_DIR=/Users/fenjinwang/duckdb
export DUCKDB_INCLUDE_DIR=/Users/fenjinwang/duckdb
export LD_LIBRARY_PATH=/Users/fenjinwang/duckdb:$LD_LIBRARY_PATH

RUST_BACKTRACE=1 cargo test  --no-default-features --features "duckdb-full"

Change-Id: I2aafbbdb4e17e198d4feb4bf3659fc64f456bdad

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ name = "rusqlite"
 members = ["libsqlite3-sys"]
 
 [features]
+duckdb = ["libsqlite3-sys/duckdb"]
 load_extension = []
 # hot-backup interface: 3.6.11 (2009-02-18)
 backup = ["libsqlite3-sys/min_sqlite_version_3_6_23"]
@@ -94,6 +95,13 @@ modern-full = [
     "uuid",
     "vtab",
     "window",
+]
+
+duckdb-full = [
+    "duckdb",
+    "serde_json",
+    "url",
+    "uuid",
 ]
 
 bundled-full = ["modern-full", "bundled"]
